# promptly

./: LICENSE  README.md  context.txt  demo.cast  mydemo.cast  prompts.md  pyproject.toml
.github/: CODEOWNERS
promptly/: __init__.py  grading_prompt.py  grading_test.py  main.py  meta_prompt.py
promptly.egg-info/: PKG-INFO  SOURCES.txt
promptly/promptly.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_find_file.py  test_get_user_inputs.py  test_grab_meta_prompt.py  test_load_api_key.py  test_meta_prompt.py  test_prompts_md.py  test_read_file.py
