[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name             = "promptly"
version          = "0.1.0"
description      = "A CLI tool to improve prompts"
readme           = "README.md"
requires-python  = ">=3.8"
license          = { text = "MIT" }

# List of dependency strings
dependencies = [
  "openai>=1.0.0",
  "python-dotenv>=0.19.0",
]

# Inline table for license
license = { text = "MIT" }

# List of inline tables for authors
authors = [
  { name = "Luke Furnell", email = "lukedavid.furnell@gmail.com" }
]

# Define the CLI entry point
[project.scripts]
promptly = "promptly.main:main"

# Tell setuptools where to find your package code
[tool.setuptools.packages.find]
where   = ["."]
include = ["promptly*"]
